# Med-GraphRAG

./: .env.example  .gitignore  CARDIOGRAPH_README.md  CHANGELOG_FORMATS.md  README.md  pyproject.toml  requirements.txt  start-cardiograph.sh
data/: cardiovascular_drugs.txt  diabetes_treatment.txt  test_medical.html  test_medical.json  test_medications.csv
docs/: SUPPORTED_FORMATS.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App-test.jsx  App.jsx  index.css
frontend/src/components/: Dashboard.jsx  Explorer.jsx  Ingest.jsx  Query.jsx  SettingsPanel.jsx  Sidebar.jsx
frontend/src/services/: api.js
graph_rag/: __init__.py  api.py  chunker.py  cli.py  config.py  database.py  document_loaders.py  embeddings.py  kg_builder.py  llm.py  models.py  retriever.py  ui.py  webapp.py
graph_rag/static/: app.js  index.html  styles.css
